# olin-electric-motorsports

./: .avrduderc  .bazelrc  .ccls  .clang-format  .gitattributes  .gitignore  .gitmodules  BUILD.bazel  README.md  WORKSPACE  bms_core.yml  dashboard.yml  database.db  lint.sh  radio_test.py  test.py
.github/: git-bazel-kicad-site-update.sh  git-bazel-kicad-site.sh  git-bazel-kicad.sh  git-bazel-site-update.sh  kicad-comment.md  labeler.yml  python-black.sh  test.py
.github/workflows/: build.yml  ci.yml  hitl.yml  kicad.yml  lint.yml  meta.yml
INCOMPLETE/CAN_Display_Board/: CAN_Display_Board.kicad_sch  readme.md
INCOMPLETE/firmware_tester_board_stm32/: firmware_tester_board_stm32.kicad_sch
LED Project/: LED Project.kicad_pro
LED Project/LED Project/: LED Project.kicad_pro  LED Project.kicad_sch
bazel/: BUILD  README.md  defs.bzl
bazel/constraints/: BUILD
examples/: README.md
libs/: README.md
parts/: README.md
projects/: README.md
projects/kicad_website/backend/: Dockerfile  board_information.py  database.db  pyproject.toml
projects/kicad_website/backend/templates/: error.html  home.html  test.html
scripts/: README.md  bms_data_analysis.py  buildifier-format.sh  clang-format.sh  install_kicad_bom_plugins.sh  install_kicad_git_filters.sh  install_kicad_git_hooks.sh  kicad_bom_custom.py  list_library_parts.py  patch_qrcode_plugin.sh  qr.patch.py  remove_kicad_git_filters.sh  remove_kicad_git_hooks.sh  workspace_status.sh
test_stm_image/: BUILD  test.c
tutorial/: README.md
tutorials/: OnboardingLibrary.kicad_sym  README.md
vehicle/: README.md
(+3820 files in other folders)
