load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

exports_files([
    ".avrduderc",
])

buildifier(
    name = "buildifier",
    tags = ["manual"],
)

buildifier(
    name = "buildifier_check",
    mode = "check",
    tags = ["manual"],
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//vehicle/mkv/software/...": "--platforms=//bazel/platforms:atmega16m1_avr -c opt",
        "//projects/btldr/tools:patch_header": "--platforms=//bazel/platforms:linux-x86_64 -c opt",
        # "//projects/btdlr/...": "--platforms=//bazel/platforms:atmega16m1_avr -c opt",
    },
)
